fix: z-index for content in layout

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -21,6 +21,7 @@ $block: '.#{variables.$ns}layout';
         flex-direction: column;
         flex-grow: 1;
         overflow: auto;
+        z-index: 1;
     }
 
     &__content {
